# example-apps

todo-advanced/frontend/: lib.js
todo/backend/: backend.cabal  watch  watchmain
todo/backend/app/: Main.hs
todo/backend/src/: Database.hs  Handlers.hs  Messages.hs  Types.hs
todo/backend/src/API/Types/: CSession.hs  CTodoListItem.hs  CUser.hs  NewTodoListItem.hs  RSession.hs  RTodoListItem.hs  RUser.hs  TodoListItem.hs  UTodoListItem.hs
todo/backend/src/Database/: Schema.sql  Seeds.sql
todo/backend/src/Database/Types/: Session.hs  TodoListItem.hs  User.hs
todo/backend/src/Standard/: Communication.hs  Database.hs  Messages.hs
todo/frontend/: app.css  app.js  index.html  lib.js
