cabal-version:      2.4
name:               backend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Leticia Zamolo Duque
maintainer:         43674302+Lzduque@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable backend
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>= 4.16.4.0,
        backend,
        websockets == 0.12.7.3,
        text == 2.0.1,
        aeson == 2.1.1.0

    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
                OverloadedStrings
                ScopedTypeVariables
                LambdaCase
                MultiWayIf
                DeriveGeneric
                DeriveAnyClass

